# omny

./: README.md
omny/: Cargo.toml
omny/src/: lib.rs
rust/: Cargo.toml
rust/src/: geojson.rs  gtfs.rs  lib.rs
server/: Cargo.toml
server/src/: lib.rs
server/src/static_data/: mod.rs  urls.rs  worker.rs
web/: package-lock.json  package.json
web/src/: App.tsx  api.ts  d.json  d.ts  mapbox.tsx
