[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
compact_str = { version = "0.1", features = ["serde"] }
csv = "1"
geo-types = "0.7"
geojson = { version = "0.22", features = ["geo-types"] }
serde = { version = "1", features = ["derive"] }
