[package]
name = "omny"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
geojson = { version = "0.22", features = ["geo-types"] }
gtfs-structures = { git = "https://github.com/ParkMyCar/gtfs", rev = "d8abd4c1", default_features = false }
itertools = "0.10"
reqwest = "0.11"
rgb = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.3"
